css/master.css
/* ANIMATIONS */
@keyframes moveUp {100% {top: -100%;}}

@keyframes blink {0% {opacity:0;} 50% {opacity:1;} 100% {opacity:0;}}

@keyframes moveHalf {50% {bottom: -50%;}100% {bottom: -5%;}}

@keyframes fadeIn {0% {opacity: 0;}100% {opacity:1;}}

@keyframes bgColor {
    0%   {background-color:rgb(150, 206,180);}
    25%  {background-color:rgb(255, 238,173);}
    50%  {background-color:rgb(255, 111, 105);}
    75%  {background-color:rgb(255, 204, 92);}
    90% {background-color:rgb(170, 216, 176 );}
    100%   {background-color:rgb(150, 206,180);}
}

.fadeIn {
   transition-delay: 1s;
   animation-name: fadeIn;
   animation-duration: 1s;
   animation-fill-mode: forwards;
}

/* Disables text-highlight selection on images */
.selectDisable {
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
}
/* Enables text-highlight selection on images */
.selectEnable {
    -webkit-user-select: text;
    -khtml-user-select: text;
    -moz-user-select: text;
    -o-user-select: text;
    user-select: text;
}

html, body {
   height: 100%;
   margin: 0;
   padding: 0;
   color: #333;
   /* FONT FOR BODY */
   font-family: 'Noto Sans', sans-serif;
}

/* FONT FOR HEADINGS */
h1, h2, h3, h4 {
   font-family: 'Fredoka One', cursive;
   text-align: center;
}

a {
   text-decoration: none;
   color: #333;
}

a:hover {
color: #555;
}

#intro {
   animation-name: bgColor;
   animation-duration: 10s;
   animation-iteration-count: infinite;
   animation-fill-mode: forwards;
}

#logo {
   display: block;
   margin: 0 25% 0 25%;
   position: absolute;
   top: 35%;
   width: 50%;
   animation-name: moveUp;
   animation-delay: 2.5s;
   animation-duration: 1.5s;
   animation-fill-mode: forwards;
}

#url {
   display: block;
   position: absolute;
   top: 22%;
   z-index: 1;
   margin: 0 0 0 23%;
   width: 55%;
   border: none;
   background: none;
   font-size: 14px;
   opacity: 0;
   transition: ease-in-out 500ms;
   /* Animation from fadeIn -class*/
   animation-delay: 4s;
}

#browser {
   display: block;
   position: absolute;
   width: 80%;
   margin: 0 10% 0 10%;
   bottom: -100%;
   transition: ease-in-out 500ms;
   animation-name: moveHalf;
   animation-delay: 1s;
   animation-duration: 3s;
   animation-fill-mode: forwards;
   box-shadow: 0px 20px 20px rgba(0,0,0,.5);
}

.chevron {
   width: 20%;
   position: absolute;
   bottom: 2%;
   right: 40%;
   left: 40%;
}

.fullScreen {
   height: 100%;
   width: 100%;
   position: relative;
}

.content {
   padding: 5% 5%;
   position: relative;
}

#first {
   background: #96CEB4;
   background-position: center;
   background-size: cover;
}

#second {
   background: #FFEEAD;
   overflow: hidden;
}

#third {
   background: #FF6F69;
   overflow: hidden;
}

#fourth {
   background: #FFCC5C;
   overflow: hidden;
}

#fifth {
   background: #AAD8B0;
   overflow: hidden;
}


/* PUZZLE SETTINGS */
.puzzle {
   position: absolute;
   height: 100%;
   margin:0;
   z-index: 3;
   overflow: hidden;
}
#puzzlePic {
   display: block;
   position: relative;
   margin: 15% 10% 0 10%;
   width: 80%;
   display: none;
}
#solved{
   display: none;
   color: #222;
   text-align: center;
   position: absolute;
   top: 5%;
   height: 10%;
   width: 32%;
   border-radius: 16px;
   margin: 0 34% 0 34%;
   z-index:4;
}
/* required snapPuzzle styles */
.snappuzzle-wrap { position: relative; display: block; }
.snappuzzle-pile { position: relative; }
.snappuzzle-piece { cursor: move; }
.snappuzzle-slot {
   position: absolute;
   background: #fff;
   opacity: .8;
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
}
.snappuzzle-slot-hover { background: #eee; }

/*
img id="laptop" src="pics/laptop.png" alt="laptop"/>
#laptop {
   display: block;
   position: relative;
   margin: 0 auto;
   bottom: -100%;
   width: 100%;
   animation-name: moveHalf;
   animation-delay: 1s;
   animation-duration: 3s;
   animation-fill-mode: forwards;
}*/

